--- a/mrb22.html
+++ b/mrb22.html
@@ -1,1 +1,16 @@
-proba - ujabb
+﻿<p><b>1. Who are you?</b></p>
+<p>Zoli: My name is Zoli, i'm a 51 years old big bear, living in Budapest with my partner of 21 years. I've been part of the hungarian bear society since the beginnings, also being the organizer of most events until recently. My hobbies are cooking, theatre and amateur acting.</p>
+<p>Moonlife: My name is Robert Simon, i live in Pecs next door to my little family and Cucu, the not so small Rottweiler. My original profession is hospitality manager, but i currently work as a nail technician, and as a cashier at a shop called "Szia Panda". I like nature, movies, TV shows, but most of all i love my friends whom i'd do anything for!</p>
+<p>Geri: My name is Gergo Horanyi, i was born and raised in Budapest, i'm 34 years old. I work at a charity as societal integration worker. I love summer and salty caramel!</p>
+<p><b>2. Why did you enter?</b></p>
+<p>Zoli: I figured i want to try to be a contestant for a change and prove that even over 50, we can still be attractive and maybe popular too.</p>
+<p>Moonlife: I enjoy testing my limits, and this competition is doing exactly that by moving me out of my comfort zone. I love meeting new people and trying new things.</p>
+<p>Geri: I've received encouragement from the bear community that i'm more than ready to go ahead, enter and shoot for a top3 placement! I'd like to test myself if i'm worthy of these endorsements.</p>
+<p><b>3. Why should you win?</b></p>
+<p>Zoli: Because i'm the prettiest bear in the country (...according to my partner :D)! I think i'd be a worthy representative of the hungarian bear community at the european election and other events.</p>
+<p>Moonlife: I see myself as a positive, open and friendly guy. I'd be very happy to be elected, but if not, that's okay too - there's more to this for me than just winning!</p>
+<p>Geri: It would be a great boost of self confidence for me to win, to show everyone that as a bear i can be pretty, not just smart! :D</p>
+<p><b>4. What would you do for the bear community?</b></p>
+<p>Zoli: Organizing programmes, beer evenings more often, and maybe resurrecting the Bear Bashes according to today's standards.</p>
+<p>Moonlife: I don't claim to have the solution to declining interest, but i'd be happy to take a stab at figuring it out and do something about it with full steam!</p>
+<p>Geri: I'd like to have more social get-togethers, like movies, pub events, hiking and similar team building activities.</p>
